# syndicate-ai

./: .env.example  .gitignore  .trivyignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
agents/design/: ai-image-strategist.yaml  brand-identity-strategist.yaml  design-systems-architect.yaml  inclusive-design-specialist.yaml  interaction-experience-designer.yaml  user-intelligence-analyst.yaml  visual-narrative-director.yaml  visual-systems-designer.yaml
agents/engineering/: ai-data-quality-engineer.yaml  appsec-architect.yaml  code-quality-engineer.yaml  data-pipeline-engineer.yaml  database-performance-engineer.yaml  distributed-systems-architect.yaml  docs-engineer.yaml  firmware-engineer.yaml  llm-optimization-architect.yaml  ml-systems-engineer.yaml  mobile-platform-engineer.yaml  platform-reliability-engineer.yaml  poc-engineer.yaml  principal-software-engineer.yaml  site-reliability-engineer.yaml  smart-contract-engineer.yaml  solutions-architect.yaml  sre-commander.yaml  threat-detection-engineer.yaml  ui-engineer.yaml  version-control-specialist.yaml
agents/gamedev/: blender-pipeline-engineer.yaml  game-systems-designer.yaml  godot-gameplay-engineer.yaml  interactive-audio-engineer.yaml  level-design-architect.yaml  narrative-systems-designer.yaml  roblox-systems-engineer.yaml  technical-art-director.yaml  unity-systems-architect.yaml  unreal-systems-engineer.yaml
agents/marketing/: ai-citation-engineer.yaml  app-store-optimization-engineer.yaml  audio-content-strategist.yaml  b2b-content-strategist.yaml  book-publishing-strategist.yaml  community-growth-specialist.yaml  content-systems-strategist.yaml  growth-systems-engineer.yaml  organic-search-engineer.yaml  short-form-video-strategist.yaml  social-authority-strategist.yaml  social-media-architect.yaml  visual-social-strategist.yaml
agents/orchestration/: workflow-controller.yaml
agents/paid-media/: account-performance-auditor.yaml  ad-creative-strategist.yaml  conversion-tracking-engineer.yaml  paid-social-architect.yaml  ppc-campaign-architect.yaml  programmatic-media-buyer.yaml  search-intelligence-analyst.yaml
agents/pm/: delivery-lead.yaml  delivery-process-engineer.yaml  experiment-lifecycle-manager.yaml  operations-excellence-manager.yaml  program-director.yaml  scope-governance-manager.yaml
agents/product/: backlog-architect.yaml  behavioral-design-engineer.yaml  market-intelligence-analyst.yaml  product-manager.yaml  voc-analyst.yaml
agents/sales/: account-expansion-strategist.yaml  deal-qualification-strategist.yaml  discovery-methodology-coach.yaml  outbound-pipeline-architect.yaml  presales-solutions-engineer.yaml  proposal-narrative-strategist.yaml  revenue-intelligence-analyst.yaml  sales-performance-coach.yaml
agents/specialized/: agent-identity-architect.yaml  compliance-certification-auditor.yaml  crm-systems-architect.yaml  developer-relations-engineer.yaml  global-market-strategist.yaml  learning-experience-designer.yaml  mcp-integration-engineer.yaml  ml-model-quality-analyst.yaml  smart-contract-security-auditor.yaml  supply-chain-optimization-strategist.yaml  talent-acquisition-specialist.yaml  workflow-automation-architect.yaml
agents/support/: bi-analyst.yaml  customer-success-engineer.yaml  executive-communications-specialist.yaml  financial-intelligence-analyst.yaml  infrastructure-reliability-engineer.yaml  regulatory-counsel.yaml
agents/testing/: accessibility-compliance-auditor.yaml  api-contract-tester.yaml  performance-benchmark-engineer.yaml  process-optimization-engineer.yaml  production-readiness-auditor.yaml  qa-verification-engineer.yaml  technology-evaluation-analyst.yaml  test-intelligence-analyst.yaml
docs/architecture/: overview.md
docs/guides/: building-workflows.md  writing-agents.md
frontend/: index.html  website.html
migrations/: env.py
migrations/versions/: 001_initial_schema.py
scripts/: validate_agents.py  validate_workflows.py
src/syndicate/: __init__.py  app.py
src/syndicate/api/: main.py
src/syndicate/cli/: __init__.py  main.py
src/syndicate/core/: __init__.py  models.py
src/syndicate/execution/: __init__.py  celery_app.py  engine.py  tasks.py
src/syndicate/hot_reload/: __init__.py  watcher.py
src/syndicate/marketplace/: __init__.py  registry.py
src/syndicate/memory/: __init__.py  store.py
src/syndicate/orchestration/: __init__.py  engine.py
src/syndicate/registry/: __init__.py  agent_registry.py  workflow_registry.py
src/syndicate/replay/: __init__.py  engine.py
src/syndicate/sdk/: __init__.py  client.py
src/syndicate/streaming/: __init__.py  sse.py
src/syndicate/tenancy/: __init__.py  middleware.py
src/syndicate/validation/: __init__.py  engine.py
src/syndicate/versioning/: __init__.py  manager.py
tests/unit/: test_models.py  test_tenancy.py  test_validation.py  test_versioning.py
workflows/examples/: enterprise-feature.yaml  marketing-campaign.yaml  startup-mvp.yaml
