[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "syndicate-ai"
version = "1.0.0"
description = "Deterministic Multi-Agent Orchestration Platform"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "NeoCodeSmith" }]
keywords = ["ai", "agents", "orchestration", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]
ignore = ["E501", "UP042"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=syndicate --cov-report=term-missing --cov-report=xml"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["src/syndicate"]
omit = ["*/tests/*", "*/migrations/*"]
